--- a/bin/train/colab_lstm_hidden12_layer3.ipynb
+++ b/bin/train/colab_lstm_hidden12_layer3.ipynb
@@ -385,6 +385,7 @@
         "        trainer.checkpoint_callback.best_model_path,\n",
         "        **Model.parse_config(model_config),\n",
         "    )\n",
+        "model.cpu()\n",
         "model.eval()"
       ]
     },
