--- a/bin/train/colab_convnet.ipynb
+++ b/bin/train/colab_convnet.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "TC3XkMetGWtK"
@@ -73,6 +74,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2g_4GtFuGlO8"
@@ -119,6 +121,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "j5fN10s3GwVz"
@@ -163,7 +166,7 @@
         "        \"config\": {\n",
         "            \"channels\": 16,\n",
         "            \"dilations\": [1,2,4,8,16,32,64,128,256,512,1024,2048,1,2,4,8,16,32,64,128,256,512,1024,2048],\n",
-        "            \"batchnorm\": true,\n",
+        "            \"batchnorm\": True,\n",
         "            \"activation\": \"Tanh\"\n",
         "        }\n",
         "    },\n",
@@ -177,7 +180,7 @@
         "            \"patience\": 50,\n",
         "            \"cooldown\": 50,\n",
         "            \"min_lr\": 1.0e-5,\n",
-        "            \"verbose\": true\n",
+        "            \"verbose\": True\n",
         "        },\n",
         "        \"monitor\": \"val_loss\"\n",
         "    }\n",
@@ -200,6 +203,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "pNga-MNTMQAa"
@@ -274,6 +278,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Lmn32oiGzrf6"
@@ -389,6 +394,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "QvuJEYxJNGn7"
@@ -463,6 +469,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "R__jJFwgNkAl"
