--- a/bin/train/colab_wavenet_8ch.ipynb
+++ b/bin/train/colab_wavenet_8ch.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "TC3XkMetGWtK"
@@ -73,6 +74,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2g_4GtFuGlO8"
@@ -119,6 +121,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "j5fN10s3GwVz"
@@ -170,8 +173,8 @@
         "                    \"kernel_size\": 3,\n",
         "                    \"dilations\": [1, 2, 4, 8, 16, 32, 64],\n",
         "                    \"activation\": \"Tanh\",\n",
-        "                    \"gated\": false,\n",
-        "                    \"head_bias\": false\n",
+        "                    \"gated\": False,\n",
+        "                    \"head_bias\": False\n",
         "                },\n",
         "                {\n",
         "                    \"condition_size\": 1,\n",
@@ -181,8 +184,8 @@
         "                    \"kernel_size\": 3,\n",
         "                    \"dilations\": [128, 256, 512, 1, 2, 4, 8, 16, 32, 64, 128, 256, 512],\n",
         "                    \"activation\": \"Tanh\",\n",
-        "                    \"gated\": false,\n",
-        "                    \"head_bias\": true\n",
+        "                    \"gated\": False,\n",
+        "                    \"head_bias\": True\n",
         "                }\n",
         "            ],\n",
         "            \"head_scale\": 0.02\n",
@@ -216,6 +219,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "pNga-MNTMQAa"
@@ -290,6 +294,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Lmn32oiGzrf6"
@@ -405,6 +410,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "QvuJEYxJNGn7"
@@ -479,6 +485,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "R__jJFwgNkAl"
